2002-08-10  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/test/trills.ly: 
	* input/test/preset-extent.ly: 
	* scm/grob-property-description.scm: more extent renaming.

2002-08-09  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/parse-scm.cc (protected_ly_parse_scm): compatibility with
	CVS GUILE 

	* input/test/preset-extent.ly (texidoc): added file.

	* scripts/convert-ly.py: add extent rule.

	* lily/grob.cc: change extent-[XY] to [XY]-extent globally.

2002-08-09  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/main.cc (main): Remove stale #ifdef for windows.

	* stepmake/stepmake/python-module-rules.make: 
	* stepmake/stepmake/python-module-vars.make: 
	* stepmake/stepmake/shared-library-vars.make: Add Cygwin support.

	* stepmake/stepmake/generic-vars.make:
	* cygwin/GNUmakefile: Fix Cygwin build detection.
	
	* stepmake/stepmake/shared-library-rules.make: Remove version juggling.

	* stepmake/stepmake/shared-library-targets.make: Default target
	includes version, add target libFOO.

	* lily/main.cc: Temporary fix for access to scm_read_opts array
	from shared Cygwin library.

2002-08-08  Rune Zedeler <rune@zedeler.dk>
	
	* ly/property-init.ly: Added phrasingSlurUp, phrasingSlurDown and
	phrasingSlurBoth.

	* input/mutopia/R.Schumann/romanze-op28-2.ly: Added.

	* input/sondag-morgen/*: renamed files from input/SondagMorgen/*
	
2002-08-08  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/beam.cc (struct Int_set): typo.

	* mf/feta-beugel.mf (code): braces should start at 0, not 1.

	* lily/include/lily-guile.hh (scm_int2num): guile 1.4 compatibility. 

	* scm/grob-description.scm (all-grob-descriptions): set
	X-offset-callbacks for TextScript

	* lily/stem.cc (invisible_b): don't use support_head(), since it
	sets stem direction.

	* lily/beam.cc (struct Int_set): don't get stuck inserting
	interval segments of length 0.0.

	* scripts/convert-ly.py:  break-align conversion.

2002-08-06  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
