@@ -1,5 +1,15 @@
 2002-08-10  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* Documentation/user/tutorial.itely (Running LilyPond): Mention
+	xdvi and XFree86 option for Windows users.
+
+	* Documentation/user/invoking.itexi: Add ly2dvi's -p alias.
+
+	* scripts/ly2dvi.py: Bugfix for `ly2dvi -I ./foo foo.ly'.  Also
+	append directory of first file to search path, allowing
+	`ly2dvi	foo/foo.ly' when foo.ly includes other files from
+	directory foo.  Add short option alias '-p' for --pdf.
+
 	* input/test/trills.ly: 
 	* input/test/preset-extent.ly: 
 	* scm/grob-property-description.scm: more extent renaming.
